sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:25: error: not found: value change1
	} while( change1==true)
                 ^